docker/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: streamlitweb
 annotations:
   kubernetes.io/ingress.global-static-ip-name: streamlitweb-ip
   networking.gke.io/managed-certificates: streamlit-certificate
 labels:
   app: streamlit
spec:
 backend:
   serviceName: streamlitweb-backend
   servicePort: 7745
---
apiVersion: v1
kind: Service
metadata:
 name: streamlitweb-backend
 labels:
   app: streamlit
spec:
 type: NodePort
 selector:
   app: streamlit
   tier: web
 ports:
 - port: 7745
   targetPort: 7745
